Prep for LTAM client (Testing using steps), also fixed bug related to taxable

--- a/invessence/modules/web/src/main/webapp/pages/advisor/edit.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/advisor/edit.xhtml
@@ -154,11 +154,11 @@
                         <p:outputPanel id="workArea" styleClass="invNBgrid" style="min-height: 600px">
                             <p:messages autoUpdate="true"/>
                             <div class="divGraphArea">
-                              <ui:include src="/pages/consumer/graphs.xhtml"/>
+                              <ui:include src="/pages/consumer/backup/graphs.xhtml/consumer/graphs.xhtml"/>
                             </div>
 
                             <div class="divDetailArea">
-                                <ui:include src="/pages/consumer/details.xhtml"/>
+                                <ui:include src="/pages/consumer/backup/details.xhtml/consumer/details.xhtml"/>
 
                             </div>
                         </p:outputPanel>
