--- a/invessence/modules/web/src/main/webapp/pages/consumer/addon/cEdit.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/addon/cEdit.xhtml
@@ -6,148 +6,150 @@
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
     <div class="Container100 Responsive50">
-    <div class="Container50 Responsive50">
-        <div class="ContainerIndent">
-            <p:panel id="inputArea" style="border: 0px">
-                <p:tabView id="pTabView" activeIndex="#{cptc.pTab}"
-                           styleClass="Container100" orientation="top"
-                           dynamic="false" cache="false"
-                           effect="slide" effectDuration="fast">
-                    <p:ajax event="tabChange"
-                            update=":ceForm:inputArea"
-                            listener="#{cptc.onPTabChange}"/>
-                    <p:tab id="p1" title="Overview">
-                        <ui:include src="/pages/consumer/addon/core0.xhtml"/>
-                    </p:tab>
-                    <p:tab id="p2" title="Asset">
-                        <ui:include src="/pages/consumer/addon/income.xhtml"/>
-                    </p:tab>
-                    <p:tab id="p3" title="Liability">
-                        <ui:include src="/pages/consumer/addon/debt.xhtml"/>
-                    </p:tab>
-                    <p:tab id="p4" title="Risk">
-                        <p:tabView id="rTabView" orientation="top" activeIndex="#{cptc.rTab}"
-                                   cache="false" dynamic="false">
-                            <p:ajax event="tabChange" listener="#{cptc.onRTabChange}"/>
-                            <p:tab id="q1" title="1">
-                                <ui:include src="/pages/consumer/addon/q1.xhtml"/>
-                            </p:tab>
-                            <p:tab id="q2" title="2">
-                                <ui:include src="/pages/consumer/addon/q2.xhtml"/>
-                            </p:tab>
-                            <p:tab id="q3" title="3">
-                                <ui:include src="/pages/consumer/addon/q3.xhtml"/>
-                            </p:tab>
-                            <p:tab id="q4" title="4">
-                                <ui:include src="/pages/consumer/addon/q4.xhtml"/>
-                            </p:tab>
-                            <p:tab id="q5" title="5">
-                                <ui:include src="/pages/consumer/addon/q5.xhtml"/>
-                            </p:tab>
-                            <p:tab id="q6" title="6">
-                                <ui:include src="/pages/consumer/addon/q6.xhtml"/>
-                            </p:tab>
-                            <p:tab id="q7" title="7">
-                                <ui:include src="/pages/consumer/addon/q7.xhtml"/>
-                            </p:tab>
-                        </p:tabView>
-                    </p:tab>
-                </p:tabView>
-                <f:facet name="footer">
-                    <p:commandButton value="Previous" styleClass="Fleft" rendered="#{cptc.enablePrevButton}"
-                                     update=":ceForm:inputArea, :ceForm:pTabView:rTabView"
-                                     actionListener="#{cptc.gotoPrevTab}"/>
-                    <p:commandButton value="Next" styleClass="Fright" rendered="#{cptc.enableNextButton}"
-                                     update=":ceForm:inputArea, :ceForm:pTabView:rTabView"
-                                     actionListener="#{cptc.gotoNextTab}"/>
-                </f:facet>
-            </p:panel>
+        <div class="Container50 Responsive50">
+            <div class="ContainerIndent">
+                <p:panel id="inputArea" style="border: 0px">
+                    <p:tabView id="pTabView" activeIndex="#{cepb.pTab}"
+                               styleClass="Container100" orientation="top"
+                               dynamic="false" cache="false"
+                               effect="slide" effectDuration="fast">
+                        <p:ajax event="tabChange"
+                                update=":ceForm:inputArea"
+                                listener="#{cepb.onPTabChange}"/>
+                        <p:tab id="p1" title="Overview">
+                            <ui:include src="/pages/consumer/addon/core0.xhtml"/>
+                        </p:tab>
+                        <p:tab id="p2" title="Asset">
+                            <ui:include src="/pages/consumer/addon/income.xhtml"/>
+                        </p:tab>
+                        <p:tab id="p3" title="Liability">
+                            <ui:include src="/pages/consumer/addon/debt.xhtml"/>
+                        </p:tab>
+                        <p:tab id="p4" title="Risk">
+                            <p:tabView id="rTabView" orientation="top" activeIndex="#{cepb.rTab}"
+                                       cache="false" dynamic="false">
+                                <p:ajax event="tabChange" listener="#{cepb.onRTabChange}"/>
+                                <p:tab id="q1" title="1">
+                                    <ui:include src="/pages/consumer/addon/q1.xhtml"/>
+                                </p:tab>
+                                <p:tab id="q2" title="2">
+                                    <ui:include src="/pages/consumer/addon/q2.xhtml"/>
+                                </p:tab>
+                                <p:tab id="q3" title="3">
+                                    <ui:include src="/pages/consumer/addon/q3.xhtml"/>
+                                </p:tab>
+                                <p:tab id="q4" title="4">
+                                    <ui:include src="/pages/consumer/addon/q4.xhtml"/>
+                                </p:tab>
+                                <p:tab id="q5" title="5">
+                                    <ui:include src="/pages/consumer/addon/q5.xhtml"/>
+                                </p:tab>
+                                <p:tab id="q6" title="6">
+                                    <ui:include src="/pages/consumer/addon/q6.xhtml"/>
+                                </p:tab>
+                                <p:tab id="q7" title="7">
+                                    <ui:include src="/pages/consumer/addon/q7.xhtml"/>
+                                </p:tab>
+                            </p:tabView>
+                        </p:tab>
+                    </p:tabView>
+                    <f:facet name="footer">
+                        <p:commandButton value="Previous" styleClass="Fleft" rendered="#{cepb.enablePrevButton}"
+                                         update=":ceForm:inputArea, :ceForm:pTabView:rTabView"
+                                         actionListener="#{cepb.gotoPrevTab}"/>
+                        <p:commandButton value="Next" styleClass="Fright" rendered="#{cepb.enableNextButton}"
+                                         update=":ceForm:inputArea, :ceForm:pTabView:rTabView"
+                                         actionListener="#{cepb.gotoNextTab}"/>
+                    </f:facet>
+                </p:panel>
+            </div>
         </div>
-    </div>
-    <div class="Container50 Responsive50">
-        <div class="ContainerIndent">
-            <p:panel id="graphArea" style="border: 0px">
-                <div class="EmptyBox10"></div>
-                <div class="Container100 Responsive100">
-                    <div class="Container100">
-                       <div class="Wid45 BorderedBox Fright TexAlCenter Mar10">
-                           <div class="ContainerIndent">
-                               <div class="EmptyBox5"></div>
-                               <span class="Fs14 DispBlock gray">Investment Risk</span>
+        <div class="Container50 Responsive50">
+            <div class="ContainerIndent">
+                <p:panel id="graphArea" style="border: 0px">
+                    <div class="EmptyBox10"></div>
+                    <div class="Container100 Responsive100">
+                        <div class="Container100">
+                            <div class="Wid45 BorderedBox Fright TexAlCenter Mar10">
+                                <div class="ContainerIndent">
+                                    <div class="EmptyBox5"></div>
+                                    <span class="Fs14 DispBlock gray">Investment Risk</span>
                                <span class="Fs24 DispBlock red">
                                    <h:outputText value="#{cepb.totalRisk}">
                                        <f:convertNumber pattern="##0.00%"/>
                                    </h:outputText>
                                    </span>
-                               <div class="EmptyBox5"></div>
-                           </div>
-                       </div>
+
+                                    <div class="EmptyBox5"></div>
+                                </div>
+                            </div>
 
 
-                       <div class="Wid45 BorderedBox Fright TexAlCenter Mar10">
-                           <div class="ContainerIndent">
-                               <div class="EmptyBox5"></div>
-                               <span class="Fs14 DispBlock gray">Expected Return</span>
+                            <div class="Wid45 BorderedBox Fright TexAlCenter Mar10">
+                                <div class="ContainerIndent">
+                                    <div class="EmptyBox5"></div>
+                                    <span class="Fs14 DispBlock gray">Expected Return</span>
                                <span class="Fs24 DispBlock invessenceblue">
                                     <h:outputText value="#{cepb.totalExpectedReturns}">
                                         <f:convertNumber pattern="##0.00%"/>
                                     </h:outputText>
                                    </span>
-                               <div class="EmptyBox5"></div>
-                           </div>
-                       </div>
+
+                                    <div class="EmptyBox5"></div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <p:outputPanel id="charts" style="border: 0px">
+                            <p:panel style="border: 0px">
+                                <div class="Container50  Fleft">
+                                    <div class="Container100">
+                                        <p:outputPanel deferred="true">
+                                            <p:chart type="pie" model="#{cepb.charts.pieChart}"
+                                                     responsive="true"/>
+                                        </p:outputPanel>
+                                    </div>
+                                </div>
+                                <div class="Container50 Fleft">
+                                    <div class="ContainerIndent">
+                                        <p:dataTable styleClass="invAllocTable"
+                                                     value="#{cepb.editableAsset}"
+                                                     var="assetList" reflow="true">
+
+                                            <p:column style="width: 2%; background-color: #{assetList.color};">
+                                                <h:outputText value=" "/>
+                                            </p:column>
+
+                                            <p:column styleClass="Wid50 TexAlLeft"
+                                                      resizable="true" headerText="Asset">
+                                                <h:outputText value="#{assetList.asset}"/>
+                                            </p:column>
+                                            <p:column styleClass="Wid40 TexAlRight"
+                                                      resizable="true" headerText="Weight">
+                                                <h:outputText value="#{assetList.userEdit}">
+                                                    <f:convertNumber pattern="##0.00%"/>
+                                                </h:outputText>
+                                            </p:column>
+                                        </p:dataTable>
+                                    </div>
+                                </div>
+                            </p:panel>
+                        </p:outputPanel>
                     </div>
-
-                    <p:outputPanel id="charts" style="border: 0px">
-                        <p:panel style="border: 0px">
-                            <div class="Container50  Fleft">
-                                <div class="Container100">
-                                    <p:outputPanel deferred="true">
-                                        <p:chart type="pie" model="#{cepb.charts.pieChart}"
-                                                 responsive="true"/>
-                                    </p:outputPanel>
-                                </div>
-                            </div>
-                            <div class="Container50 Fleft">
-                                <div class="ContainerIndent">
-                                    <p:dataTable styleClass="invAllocTable"
-                                                 value="#{cepb.editableAsset}"
-                                                 var="assetList" reflow="true">
-
-                                        <p:column style="width: 2%; background-color: #{assetList.color};">
-                                            <h:outputText value=" "/>
-                                        </p:column>
-
-                                        <p:column styleClass="Wid50 TexAlLeft"
-                                                  resizable="true" headerText="Asset">
-                                            <h:outputText value="#{assetList.asset}"/>
-                                        </p:column>
-                                        <p:column styleClass="Wid40 TexAlRight"
-                                                  resizable="true" headerText="Weight">
-                                            <h:outputText value="#{assetList.userEdit}">
-                                                <f:convertNumber pattern="##0.00%"/>
-                                            </h:outputText>
-                                        </p:column>
-                                    </p:dataTable>
-                                </div>
-                            </div>
-                        </p:panel>
-                    </p:outputPanel>
-                </div>
-            </p:panel>
+                </p:panel>
+            </div>
         </div>
-    </div>
 
-                    <p style="font-style: italic; font-size: .8em;">
-                        This portfolio is designed for illustration purposes only. The cumulative value of the portfolio
-                        (net of fees) is based on the historical performance of the underlying securities and adjusted for changes in the asset allocation over time.
-                        It does not take in affect any tax withholdings or distributions.
-                        Past performance is no guarantee of future results. Any historical returns,
-                        expected returns, or probability projections may not reflect actual future
-                        performance. All securities involve risk and may result in loss. Not an offer,
-                        solicitation of an offer, or advice to buy or sell securities in jurisdictions
-                        where Invessence is not registered
-                    </p>
+        <p style="font-style: italic; font-size: .8em;">
+            This portfolio is designed for illustration purposes only. The cumulative value of the portfolio
+            (net of fees) is based on the historical performance of the underlying securities and adjusted for changes in the asset allocation over time.
+            It does not take in affect any tax withholdings or distributions.
+            Past performance is no guarantee of future results. Any historical returns,
+            expected returns, or probability projections may not reflect actual future
+            performance. All securities involve risk and may result in loss. Not an offer,
+            solicitation of an offer, or advice to buy or sell securities in jurisdictions
+            where Invessence is not registered
+        </p>
     </div>
 
 </ui:composition>
