LTAM + Revised Rebalanced

--- a/invessence/modules/web/src/main/webapp/pages/admin/billingRpt.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/admin/billingRpt.xhtml
@@ -9,7 +9,7 @@
       xmlns:pe="http://primefaces.org/ui/extensions">
 <h:body>
 
-    <ui:composition template="/template/common/layout.xhtml">
+    <ui:composition template="/template/common/backup/layout.xhtml/common/layout.xhtml">
 
         <ui:define name="content">
                            <h:form id="statusForm">
