--- a/invessence/modules/web/src/main/webapp/pages/advisor/index.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/advisor/index.xhtml
@@ -11,7 +11,7 @@
 
 <h:head></h:head>
 <h:body>
-    <ui:composition template="/template/common/layout.xhtml">
+    <ui:composition template="/template/common/backup/layout.xhtml/common/layout.xhtml">
         <script type="text/javascript" src="/js/accountSelector.js"></script>
         <ui:define name="content">
 
