--- a/invessence/modules/web/src/main/webapp/pages/common/signupApproval.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/common/signupApproval.xhtml
@@ -16,7 +16,7 @@
 -->
 
 <h:body>
-    <ui:composition template="/template/common/layout.xhtml">
+    <ui:composition template="/template/common/backup/layout.xhtml/common/layout.xhtml">
         <ui:define name="content">
 
 
