--- a/invessence/modules/web/src/main/webapp/pages/consumer/personalprofile2.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/personalprofile2.xhtml
@@ -10,7 +10,7 @@
 
 
 <h:body>
-   <ui:composition template="/template/common/responsivelayout.xhtml">
+   <ui:composition template="/template/common/backup/responsivelayout.xhtml/common/responsivelayout.xhtml">
       <ui:define name="content">
          <div id="et-main-area">
             <div id="main-content">
