--- a/invessence/modules/web/src/main/webapp/login-v1.xhtml
+++ b/invessence/modules/web/src/main/webapp/login-v1.xhtml
@@ -16,7 +16,7 @@
 </f:metadata>
 
 <h:body>
-    <ui:composition template="/template/common/layout.xhtml">
+    <ui:composition template="/template/common/backup/layout.xhtml/common/layout.xhtml">
         <ui:define name="content">
             <div id="main-content">
 
