--- a/invessence/modules/web/src/main/webapp/pages/common/error.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/common/error.xhtml
@@ -12,7 +12,7 @@
 
 <h:body>
 
-    <ui:composition template="/template/common/layout.xhtml">
+    <ui:composition template="/template/common/backup/layout.xhtml/common/layout.xhtml">
     <ui:define name="content">
         <div id="main-content" class="content_section" style="background-color: #f5f5f5;">
             <div id="wrapper" class="container">
