--- a/invessence/modules/web/src/main/webapp/pages/consumer/employmentprofile.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/employmentprofile.xhtml
@@ -13,7 +13,7 @@
    <f:event type="preRenderView" listener="#{clientBean.preRenderView}"/>
 </f:metadata>
 <h:body>
-   <ui:composition template="/template/common/responsivelayout.xhtml">
+   <ui:composition template="/template/common/backup/responsivelayout.xhtml/common/responsivelayout.xhtml">
       <ui:define name="content">
          <div id="et-main-area">
             <div id="main-content">
