--- a/invessence/modules/web/src/main/webapp/pages/consumer/manage.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/manage.xhtml
@@ -15,7 +15,7 @@
 </f:metadata>
 <h:body>
     <script type="text/javascript" src="/js/accountSelector.js"></script>
-    <ui:composition template="/template/common/layout.xhtml">
+    <ui:composition template="/template/common/backup/layout.xhtml/common/layout.xhtml">
         <ui:define name="content">
 
             <div id="main-content" class="content_section" style="background-color: #f5f5f5; padding: 2px;">
