--- a/invessence/modules/web/src/main/webapp/pages/consumer/position.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/position.xhtml
@@ -9,7 +9,7 @@
       xmlns:p="http://primefaces.org/ui">
 
 <h:body>
-<ui:composition template="/template/common/layout.xhtml">
+<ui:composition template="/template/common/backup/layout.xhtml/common/layout.xhtml">
 <ui:define name="content">
 <div id="main-content" class="content_section" style="background-color: #f5f5f5; padding-top: 80px">
     <div id="wrapper" class="container">
