--- a/invessence/modules/web/src/main/webapp/pages/consumer/regulatory.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/regulatory.xhtml
@@ -15,7 +15,7 @@
     <f:event type="preRenderView" listener="#{clientBean.preRenderView}"/>
 </f:metadata>
 <h:body>
-    <ui:composition template="/template/common/responsivelayout.xhtml">
+    <ui:composition template="/template/common/backup/responsivelayout.xhtml/common/responsivelayout.xhtml">
         <ui:define name="content">
             <div id="et-main-area">
                 <div id="main-content" class="content_section" style="background-color: #f5f5f5; padding: 5px;">
