--- a/invessence/modules/web/src/main/webapp/pages/consumer/test.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/test.xhtml
@@ -15,7 +15,7 @@
 </h:head>
 
 <h:body>
-    <ui:composition template="/template/common/layout.xhtml">
+    <ui:composition template="/template/common/backup/layout.xhtml/common/layout.xhtml">
         <ui:define name="content">
             <div id="main-content" class="content_section" style="background-color: #f5f5f5; padding: 5px;">
                 <div id="wrapper" class="container">
