--- a/invessence/modules/web/src/main/webapp/spark/forms.xhtml
+++ b/invessence/modules/web/src/main/webapp/spark/forms.xhtml
@@ -3,7 +3,7 @@
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
-                template="/template/common/template.xhtml">
+                template="/template/common/backup/template.xhtml/common/template.xhtml">
 
     <ui:define name="content">
 
