--- a/invessence/modules/web/src/main/webapp/try/ltam/addon/page1.xhtml
+++ b/invessence/modules/web/src/main/webapp/try/ltam/addon/page1.xhtml
@@ -6,22 +6,17 @@
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
     <div class="Container100 Responsive50 TextAlCenter">
-            Page 1<br/>
+            <h1>Which of the following best reflects your investment goals?</h1>
 
-            <h1>
-                My name is <input type="text" class="simpleInputText" value="#{ltamprofile.firstname}"/>
-                 <input type="text" value="#{ltamprofile.lastname}" class="simpleInputText"/>.
-                <br/>
-                I am <input type="text" required="true" class="simpleInputText" value="#{ltamprofile.age}"/> years old.
-                <br/>
-                and I am
-                <p:selectOneMenu required="true" style="width:125px">
-                <f:selectItem itemLabel="Select One" itemValue="" />
-                <f:selectItem itemLabel="Retired" itemValue="Retirement" />
-                <f:selectItem itemLabel="Not Retired" itemValue="NotRetired" />
-            </p:selectOneMenu>
-                .
-            </h1>
+            <h2>
+                <p:selectOneRadio layout="pageDirection" value="#{ltamprofile.ans1}">
+                    <f:selectItem itemLabel="Maximize current income." itemValue="0"/>
+                    <f:selectItem itemLabel="Emphasizing income with some potential for growth." itemValue="1"/>
+                    <f:selectItem itemLabel="Emphasizing growth with some potential for income." itemValue="2"/>
+                    <f:selectItem itemLabel="Growth." itemValue="3"/>
+                    <f:selectItem itemLabel="Maximizing growth." itemValue="4"/>
+                </p:selectOneRadio>
+            </h2>
     </div>
 
 </ui:composition>
