--- a/invessence/modules/web/src/main/webapp/try/ltam/addon/page2.xhtml
+++ b/invessence/modules/web/src/main/webapp/try/ltam/addon/page2.xhtml
@@ -6,23 +6,16 @@
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
     <div class="Container100 Responsive50 TextAlCenter">
-            <h1>Which of the following best reflects your investment goals?</h1>
+        <h1>How long do you plan on keeping this account invested?</h1>
+        <br/><br/>
 
-            <h2>
-                <p:selectOneRadio layout="pageDirection" value="#{ltamprofile.selectedchoice1}">
-                    <f:selectItem itemLabel="Maximize current income." itemValue="0">
-                        Great! We'll create an income driven portfolio with low return and low risk to the portfolio.
-                    </f:selectItem>
-                    <f:selectItem itemLabel="Emphasizing income with some potential for growth." itemValue="1">
-                    </f:selectItem>
-                    <f:selectItem itemLabel="Emphasizing growth with some potential for income." itemValue="2">
-                    </f:selectItem>
-                    <f:selectItem itemLabel="Growth." itemValue="3">
-                    </f:selectItem>
-                    <f:selectItem itemLabel="Maximizing growth." itemValue="4">
-                    </f:selectItem>
-                </p:selectOneRadio>
-            </h2>
+        <div class="Fright">
+            <h:outputText id="outputHorizon" value="#{ltamprofile.horizon}"/>
+        </div>
+        <h:inputHidden id="horizon" value="#{ltamprofile.horizon}"/>
+        <p:slider for="horizon" minValue="5" maxValue="30" step="1"
+                  display="outputHorizon" displayTemplate="#{ltamprofile.horizon}"/>
+
     </div>
 
 </ui:composition>
