--- a/invessence/modules/web/src/main/webapp/try/ltam/addon/page4.xhtml
+++ b/invessence/modules/web/src/main/webapp/try/ltam/addon/page4.xhtml
@@ -6,14 +6,14 @@
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
     <div class="Container100 Responsive50 TextAlCenter">
-            <h1>How long do you plan on keeping this account invested?</h1>
-            <h2>
-            <h:panelGrid columns="1" style="margin-bottom: 10px">
-                <p:inputText id="txt3" value="#{ltamprofile.horizon}" />
-                <p:slider for="txt3" minValue="5" maxValue="30"/>
-            </h:panelGrid>
-            </h2>
+        <h1>Approximately how much money do you plan to invest in this account?</h1>
+        <br/><br/>
 
+        <pe:inputNumber id="initialInvestment" styleClass="Wid90"
+                        value="#{ltamprofile.investment}"
+                        maxlength="11" decimalPlaces="0" symbol="$"/>
+        <br/><br/>
+        <h:outputText value="(Min of $500)"/>
     </div>
 
 </ui:composition>
