--- a/invessence/modules/web/src/main/webapp/tryus.xhtml
+++ b/invessence/modules/web/src/main/webapp/tryus.xhtml
@@ -13,7 +13,7 @@
 
 <h:body>
 
-    <ui:composition template="/template/common/layout.xhtml">
+    <ui:composition template="/template/common/backup/layout.xhtml/common/layout.xhtml">
 
         <ui:define name="content">
 
