--- a/invessence/modules/web/src/main/webapp/viewExpired.xhtml
+++ b/invessence/modules/web/src/main/webapp/viewExpired.xhtml
@@ -11,7 +11,7 @@
 
 <h:head></h:head>
 <h:body>
-   <ui:composition template="/template/common/layout.xhtml">
+   <ui:composition template="/template/common/backup/layout.xhtml/common/layout.xhtml">
       <ui:define name="content">
          <div id="main-content" class="content_section" style="background-color: #f5f5f5;">
             <div id="wrapper" class="container">
